feat: Serviço de reconhecimento facial.